fixed alignment of time boxes

--- a/Develop/style.css
+++ b/Develop/style.css
@@ -37,12 +37,6 @@ textarea {
   /*border-top: 1px solid white;*/
 }
 
-/*.hour {
-  background-color: #ffffff;
-  color: #000000;
-  border-top: 1px dashed #000000;
-}*/
-
 .past {
   background-color: #d3d3d3;
   color: white;
@@ -80,13 +74,14 @@ textarea {
   border: 2px solid black;
 }
 
-p {
+.time-of-day {
   font-size: 18px;
 }
 
 .test {
   border-top: 2px dashed gray;
   border-right: 2px solid black;
+  margin-bottom: 17px;
 }
 
 .btn-move {
